--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -84,7 +84,7 @@ def snapshots(client: ChalkClient):
 ```
 
 These fixtures serve to output two Pandas DataFrames: the main_snapshot_df (which is stored in
-a dataset called `user_snapshot`) and the branch snapshot (which is generated
+a dataset called `user_snapshot`) and the `branch_snapshot_df` (which is generated
 on the fly with an offline query).
 
 Next, we will use those snapshots in a test:
