--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -164,7 +164,7 @@ jobs:
           pytest -s ./tests
 ```
 
-The second GitHub Action runs our update script to update the `user_snapshot` dataset with our latest snapshot. In runs whenever we push code to the main branch.
+The second GitHub Action runs our update script to update the `user_snapshot` dataset with our latest snapshot. It runs whenever we push code to the main branch.
 
 ```yaml
 on:
