add streaming api doc links

--- a/streams.mdx
+++ b/streams.mdx
@@ -13,6 +13,8 @@ Chalk supports [Kafka](https://kafka.apache.org/), [Kinesis](https://aws.amazon.
 and [PubSub](https://cloud.google.com/pubsub) for streaming.
 Like other integration sources, source parameters and credentials
 may be specified in either the dashboard or the source instantiation in code.
+See more information on [KafkaSource](/api-docs#KafkaSource),
+[KinesisSource](/api-docs#KinesisSource), and [PubSubSource](/api-docs#PubSubSource) in the API docs.
 
 ```py
 from chalk.streams import KafkaSource, KinesisSource, PubSubSource
