fixing broken links in docs

--- a/branches.mdx
+++ b/branches.mdx
@@ -28,7 +28,7 @@ If you're using the Python API, you can set the branch when creating your [clien
 
 ### Continuously Deploy Changes
 
-You can ask the Chalk CLI to continuously deploy changes to your branch using the [`watch`](cli/apply#watch) flag.  
+You can ask the Chalk CLI to continuously deploy changes to your branch using the [`watch`](/cli/apply#watch) flag.
 Chalk will automatically keep the branch up to date as you make changes locally.
 
 ---
