--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1519,7 +1519,7 @@ Chalk has lots of documentation, and finding content is now difficult.
 
 We've added docs search!
 
-![Documentation search](/img/docs-search.gif)
+![Documentation search](/img/docs_search.png)
 
 Try it out by typing `cmd-K`, or clicking the search button at the top of the
 table of contents.
