--- a/query-offline.mdx
+++ b/query-offline.mdx
@@ -241,7 +241,7 @@ It will then launch jobs for each shard, while not exceeding 10 concurrent pods 
 If you lose track of the state of a long-running offline query, you'll always be able to retrieve the outputs later.
 First, check the offline query dashboard: you'll be able to download all shards of the output,
 individually or as a group, there.
-You can also retrieve the outputs via Python with the [`ChalkClient.get_dataset`](api-docs#ChalkClient.get_dataset) method:
+You can also retrieve the outputs via Python with the [`ChalkClient.get_dataset`](/api-docs#ChalkClient.get_dataset) method:
 simply copy and paste the `Query Id` from the offline query dashboard into your function call.
 
 ```python
