--- a/underscore.mdx
+++ b/underscore.mdx
@@ -171,6 +171,7 @@ combination with underscore references to transform features:
 * [`split_part`](/api-docs#split_part)
 * [`starts_with`](/api-docs#starts_with)
 * [`substr`](/api-docs#substr)
+* [`upper`](/api-docs#upper)
 * [`trim`](/api-docs#trim)
 
 #### Encoding and decoding
@@ -192,7 +193,9 @@ combination with underscore references to transform features:
 * [`floor`](/api-docs#floor)
 * [`haversine`](/api-docs#haversine)
 * [`ln`](/api-docs#ln)
+* [`mod`](/api-docs#mod)
 * [`power`](/api-docs#power)
+* [`sigmoid`](/api-docs#sigmoid)
 * [`sin`](/api-docs#sin)
 * [`sqrt`](/api-docs#sqrt)
 
@@ -216,6 +219,7 @@ combination with underscore references to transform features:
 
 #### Array Manipulation
 
+* [`array_agg`](/api-docs#array_agg)
 * [`head`](/api-docs#head)
 * [`slice`](/api-docs#slice)
 * [`contains`](/api-docs#contains)
@@ -224,4 +228,3 @@ combination with underscore references to transform features:
 
 * [`cast`](/api-docs#cast)
 * [`sagemaker_predict`](/api-docs#sagemaker_predict)
-* [`haversine`](/api-docs#haversine)
