--- a/dynamodb.mdx
+++ b/dynamodb.mdx
@@ -50,7 +50,7 @@ and should match the `name` provided to your `DynamoDBSource`.
 
 Chalk uses [PartiQL](https://partiql.org/) to execute SQL queries on your DynamoDB connection. Chalk extends PartiQL to
 support aliasing and limits: you can rename your result columns to match your feature names
-and limit results. The above example demonstrates aliasing with `TransactionVolume AS transaction_volume`
+and limit results. The above example demonstrates aliasing with `TransactionVolume AS transaction_volume`.
 
 Chalk extends PartiQL with the following syntax:
 
