--- a/dynamodb.mdx
+++ b/dynamodb.mdx
@@ -55,7 +55,7 @@ and limit results. The above example demonstrates aliasing with `TransactionVolu
 Chalk extends PartiQL with the following syntax:
 
 ```
---- Vanilla PartiQL
+--- Amazon PartiQL
 SELECT expression  [, ...]
 FROM table[.index]
 [ WHERE condition ] [ ORDER BY key [DESC|ASC] , ...]
