--- a/configuration.mdx
+++ b/configuration.mdx
@@ -69,6 +69,12 @@ features and resolvers.
         <SubAttribute field='dockerfile' kind='str'>
           Path to an alternative Dockerfile that will be used to build a base image for your Chalk deploys.
         </SubAttribute>
+        <SubAttribute field='platform_version' kind='str'>
+          Reference a version of the Chalk runtime that you want to use for this environment. Can be either a version
+          tag, like `3.0.0`, or a release stream like `stable`.
+
+          If not specify, defaults to `stable`.
+        </SubAttribute>
       </SubAttributeTable>
     </SubAttribute>
   </SubAttributeTable>
