--- a/configuration.mdx
+++ b/configuration.mdx
@@ -71,7 +71,9 @@ features and resolvers.
         </SubAttribute>
         <SubAttribute field='platform_version' kind='str'>
           Reference a version of the Chalk runtime that you want to use for this environment. Can be either a version
-          tag, like `3.0.0`, or a release stream like `stable`. If not specify, defaults to `stable`.
+          tag, like `3.0.0`, or a release stream like `stable`.
+
+          If not specified, defaults to `stable`.
         </SubAttribute>
       </SubAttributeTable>
     </SubAttribute>
@@ -130,7 +132,7 @@ project: my-project-id
 
 environments:
   default:
-    runtimes: python312
+    runtime: python312
     requirements: requirements.txt
   prod:
     dockerfile: ./DockerfileProd
