--- a/query-basics.mdx
+++ b/query-basics.mdx
@@ -58,7 +58,7 @@ Read more about the parameters to this method [here](/api-docs#ChalkClient.query
 <Attribute field={'inputs'} kind={'map[string, JSON]'}>
   Input features and values are provided at the time of request.
   For example, primary key-value pairs often designate the subset of data returned. Feature inputs
-  are provided by fully qualified path, rooted in the same feature namespace.  <a href={'/docs/has-many'}>Has many features</a>
+  are provided by fully qualified path.  <a href={'/docs/has-many'}>Has many features</a>
   are input as lists, and <a href={'/docs/feature-types#dataclass'}>struct features</a> are input as Json.
 
   An example of passing a user with two credit cards as input:
