--- a/resolver-online-offline.mdx
+++ b/resolver-online-offline.mdx
@@ -34,6 +34,7 @@ in cloud storage (S3/GCS), whereas online queries write their results to databas
 | A triggered resolver run with `store_offline=True (default behavior)` | A triggered resolver run with `store_online=True (default behavior)`               |
 | scheduled queries with `recompute_features=True` and `store_offline=True (default behavior)` | scheduled query with `store_online=True (default behavior)`         |
 | Ingesting a dataset to the offline store: `dataset.ingest(store_offline=True)` | Ingesting a dataset to the online store: `dataset.ingest(store_online=True)`|
+| offline queries with `ChalkClient.offline_query(store_offline=True)` | offline queries with `ChalkClient.offline_query(store_online=True)`|
 | An `@online` or `@offline` scheduled resolver                          | An `@online` or `@offline` scheduled resolver that computes features with `max_staleness!=0` and `etl_offline_to_online=True` |
 | A streaming resolver: `@stream`                                        | A streaming resolver: `@stream`                                                      |
 
