--- a/snowflake-deployment.mdx
+++ b/snowflake-deployment.mdx
@@ -40,7 +40,7 @@ has `OWNER` on that database. To provision all of these, you can run the followi
 commands in a Snowflake worksheet or console. Be sure to change the password, and
 you can share the password with us securely via an encrypted message following [using GPG](/docs/public-key).
 
-```
+```sql
 -- input variables (feel free to change these)
 SET WAREHOUSE_NAME='CHALK_WAREHOUSE';
 SET WAREHOUSE_SIZE='XSMALL';
@@ -51,7 +51,6 @@ SET SCHEMA_NAME='SANDBOX';
 
 -- **** NOTE: Choose a secure password ****
 SET PASSWORD=<change this password>;
-
 
 -- derived variables
 SET QUALIFIED_SCHEMA_NAME=concat($DB_NAME, '.', $SCHEMA_NAME);
@@ -103,13 +102,13 @@ and unload data from the offline store.
 *Please ask us for a confirmation of which commands to run and the s3 bucket name before
 creating the storage integrations,* but it should look something like this:
 
-```
+```sql
 CREATE STORAGE INTEGRATION "s3-integration-chalk-{organization}-dataset-bucket"
 TYPE = EXTERNAL_STAGE
 STORAGE_PROVIDER='s3'
 STORAGE_AWS_ROLE_ARN = 'arn:aws:iam::<your aws account id>:role/snowflake-chalk-{organization}-dataset-bucket'
 ENABLED = true
-STORAGE_ALLOWED_LOCATIONS = ( 's3://chalk-{organization}-dataset-bucket/');
+STORAGE_ALLOWED_LOCATIONS = ('s3://chalk-{organization}-dataset-bucket/');
 
 GRANT USAGE ON INTEGRATION "s3-integration-chalk-{organization}-dataset-bucket" TO ROLE "CHALK_ROLE";
 
