--- a/dynamodb.mdx
+++ b/dynamodb.mdx
@@ -4,7 +4,8 @@ description: Integrate with DynamoDB.
 published: true
 ---
 
-Chalk supports [DynamoDB](https://aws.amazon.com/dynamodb/) as a [SQL source](/docs/sql).
+Chalk supports [DynamoDB](https://aws.amazon.com/dynamodb/) as a natively accelerated [SQL source](/docs/sql). After connecting your AWS
+credentials, you will be able to query your DynamoDB instance through Chalk with [PartiQL](https://partiql.org/).
 
 ## Adding DynamoDB
 
