--- a/underscore.mdx
+++ b/underscore.mdx
@@ -170,6 +170,7 @@ combination with underscore references to transform features:
 * [`reverse`](/api-docs#reverse)
 * [`split_part`](/api-docs#split_part)
 * [`starts_with`](/api-docs#starts_with)
+* [`strpos`](/api-docs#strpos)
 * [`substr`](/api-docs#substr)
 * [`upper`](/api-docs#upper)
 * [`trim`](/api-docs#trim)
@@ -180,6 +181,9 @@ combination with underscore references to transform features:
 * [`gunzip`](/api-docs#gunzip)
 * [`json_value`](/api-docs#json_value)
 * [`md5`](/api-docs#md5)
+* [`sha1`](/api-docs#sha1)
+* [`sha256`](/api-docs#sha256)
+* [`sha512`](/api-docs#sha512)
 * [`string_to_bytes`](/api-docs#string_to_bytes)
 
 #### Math
@@ -191,10 +195,12 @@ combination with underscore references to transform features:
 * [`cosine_similarity`](/api-docs#cosine_similarity)
 * [`exp`](/api-docs#exp)
 * [`floor`](/api-docs#floor)
+* [`from_base`](/api-docs#from_base)
 * [`haversine`](/api-docs#haversine)
 * [`ln`](/api-docs#ln)
 * [`mod`](/api-docs#mod)
 * [`power`](/api-docs#power)
+* [`round`](/api-docs#round)
 * [`sigmoid`](/api-docs#sigmoid)
 * [`sin`](/api-docs#sin)
 * [`sqrt`](/api-docs#sqrt)
@@ -204,6 +210,7 @@ combination with underscore references to transform features:
 * [`day_of_month`](/api-docs#day_of_month)
 * [`day_of_week`](/api-docs#day_of_week)
 * [`day_of_year`](/api-docs#day_of_year)
+* [`format_datetime`](/api-docs#format_datetime)
 * [`hour_of_day`](/api-docs#hour_of_day)
 * [`month_of_year`](/api-docs#month_of_year)
 * [`total_seconds`](/api-docs#total_seconds)
@@ -220,7 +227,13 @@ combination with underscore references to transform features:
 #### Array Manipulation
 
 * [`array_agg`](/api-docs#array_agg)
+* [`array_join`](/api-docs#array_join)
+* [`cardinality`](/api-docs#cardinality)
 * [`head`](/api-docs#head)
+* [`max`](/api-docs#max)
+* [`max_by`](/api-docs#max_by)
+* [`min`](/api-docs#min)
+* [`min_by`](/api-docs#min_by)
 * [`slice`](/api-docs#slice)
 * [`contains`](/api-docs#contains)
 
