--- a/changelog.mdx
+++ b/changelog.mdx
@@ -74,6 +74,11 @@ useful information for debugging failed or pending pods.
 
 ![Detailed Kubernetes logs in dashboard](/img/k8s-dashboard-logs-nov-2024.png)
 
+### Improved stacktrace rendering in Chalk CLI
+
+We've drastically improved the rendering of stacktraces in the [Chalk CLI](/cli) with improved syntax highlighting
+and clearer formatting to make debugging easier. 
+
 ---
 
 ## November 18, 2024
