--- a/changelog.mdx
+++ b/changelog.mdx
@@ -32,9 +32,8 @@ You can also use [`max_by`](/api-docs#max_by) and [`min_by`](/api-docs#min_by) t
 minimum values in a given column in a DataFrame. For mathematical operations, you can now [`round`](/api-docs#round)
 numbers and use [`from_base`](/api-docs#from_base) for base conversion. For encoding, you can now compute
 the [`sha1`](/api-docs#sha1), [`sha256`](/api-docs#sha256), and [`sha512`](/api-docs#sha512) hashes of strings.
-Finally, you can use [`format_datetime`](/api-docs#format_datetime) to format datetime features using a format string
-and [`strpos`](/api-docs#strpos) to find the first position of a substring in a string. To read more about all of the
-`chalk.functions` in your toolbox for writing underscore expressions, check out our
+Finally, you can use [`format_datetime`](/api-docs#format_datetime) to format datetime features using a format string.
+To read more about all of the `chalk.functions` in your toolbox for writing underscore expressions, check out our
 [`API docs`](/api-docs#section-Functions).
 
 ### Optionally cache nulls or default feature values in the online store
