--- a/underscore.mdx
+++ b/underscore.mdx
@@ -171,6 +171,7 @@ combination with underscore references to transform features:
 * [`split_part`](/api-docs#split_part)
 * [`starts_with`](/api-docs#starts_with)
 * [`substr`](/api-docs#substr)
+* [`strpos`](/api-docs#strpos)
 * [`upper`](/api-docs#upper)
 * [`trim`](/api-docs#trim)
 
