--- a/changelog.mdx
+++ b/changelog.mdx
@@ -76,7 +76,7 @@ useful information for debugging failed or pending pods.
 
 ### Improved stacktrace rendering in Chalk CLI
 
-We've drastically improved the rendering of stacktraces in the [Chalk CLI](/cli) with improved syntax highlighting
+We've drastically improved the rendering of stacktraces in the [Chalk CLI](/cli/chalk) with improved syntax highlighting
 and clearer formatting to make debugging easier. 
 
 ---
