--- a/integrations.mdx
+++ b/integrations.mdx
@@ -29,8 +29,8 @@ storage providers, find more below:
 Integrate with Amazon Web Services to read from data sources such as **[Redshift](/docs/redshift)**,
 **[S3](/docs/s3)**, and **[Kinesis](/docs/stream-sources)**.
 * **[GCP](/docs/gcp)** -
-Integrate with Google CLoud Platform to read from data sources such as **[BigQuery](/docs/bigquery)** and
-**[Cloud Storage](/docs/s3)**.
+Integrate with Google CLoud Platform to read from data sources such as **[BigQuery](/docs/bigquery)**, **[Spanner](/docs/spanner)**,
+**[PubSub](/docs/stream-sources)**, and **[Cloud Storage](/docs/s3)**.
 - **[SQL Integrations](/docs/sql)** -
 Chalk has special support for [SQLAlchemy](https://www.sqlalchemy.org/) and can push down filters into SQL
 queries for more efficient data fetching.
